--- a/templates/smart_crop_system_main.html
+++ b/templates/smart_crop_system_main.html
@@ -74,6 +74,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                     <!-- PM-Kisan Logo Link -->
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link p-0" href="https://pmkisan.gov.in/" target="_blank" rel="noopener noreferrer">
+                            <img src="{{url_for('static', filename='images/pmkisan-logo.png')}}" alt="PM-Kisan" style="height:30px;">
+                        </a>
+                    </li>
                     <li class="nav-item"><a class="nav-link active" href="#info" onclick="showSection('info')">Info</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about" onclick="showSection('about')">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact" onclick="showSection('contact')">Contact</a></li>
@@ -182,3 +188,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
