--- a/templates/login.html
+++ b/templates/login.html
@@ -221,8 +221,19 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
+
+    <script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("/service-worker.js")
+    .then(reg => console.log("Service Worker registered:", reg))
+    .catch(err => console.error("Service Worker registration failed:", err));
+}
+</script>
+
+
 </body>
 </html>
+
 
 
 
