--- a/templates/login.html
+++ b/templates/login.html
@@ -231,8 +231,18 @@ if ("serviceWorker" in navigator) {
 </script>
 
 
+    <script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("/service-worker.js")
+    .then(reg => console.log("Service Worker registered:", reg))
+    .catch(err => console.error("Service Worker registration failed:", err));
+}
+</script>
+
+
 </body>
 </html>
+
 
 
 
