--- a/templates/smart_crop_recommendation_multilang.html
+++ b/templates/smart_crop_recommendation_multilang.html
@@ -187,6 +187,10 @@
 </div> 
 
             <button type="submit" class="btn btn-success w-100" id="btnPredict">Recommend Crop</button>
+
+            <div style="margin-top: 10px;">
+                <a href="/disease-predict" class="text-primary" style="text-decoration: underline;"> 🌾 Predict Crop Disease</a>
+            </div>
         </form>
             <div class="form-check form-switch my-3">
                 <input class="form-check-input" type="checkbox" id="debugMode">
@@ -599,6 +603,7 @@ document.getElementById("cropForm").addEventListener("submit", function(e) {
 
 </body>
 </html>
+
 
 
 
