--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Login - Smart CropX</title>
+  <title> <a class="navbar-brand d-flex align-items-center" href="{{url_for('main')}}">
+                <img src="{{ url_for('static', filename='images/CROPx.png') }}" alt="CROPx Logo" style="width:40px;height:40px;border-radius:8px;margin-right:10px;object-fit:cover;" />
+                Login - Smart CropX
+            </a></title>
   <link rel="manifest" href="/manifest.json">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -242,6 +245,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
