--- a/templates/smart_crop_system_info.html
+++ b/templates/smart_crop_system_info.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><a class="navbar-brand d-flex align-items-center" href="{{url_for('main')}}">
-                <img src="{{ url_for('static', filename='images/CROPx.png') }}" alt="CROPx Logo" style="width:40px;height:40px;border-radius:8px;margin-right:10px;object-fit:cover;" />
-                Smart Crop Recommendation System 
-            </a></title>
+    <title> Smart Crop Recommendation System 
+            </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -136,6 +134,7 @@
     </div>
 </body>
 </html>
+
 
 
 
