--- a/templates/smart_crop_recommendation_multilang.html
+++ b/templates/smart_crop_recommendation_multilang.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Crop Recommendation System</title>
+    <title><a><\a>Smart Crop Recommendation System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
    <style>
     /* Background + overlay (place last to override Bootstrap) */
